--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115535325-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-115535325-1');
+    </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <title>Name of the App</title>
+    <title>Town of Salem Filter</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="A town of salem game assistant. It helps with the logic aspect of the game. Created by Roman Struna.">
+    <meta name="author" content="Roman Struna">
+    <meta property="og:title" content="A town of salem filter created by Roman Struna">
+    <meta property="og:description" content="A town of salem game assistant. It helps with the logic aspect of the game. Created by Roman Struna.">
+    <meta name="twitter:title" content="A town of salem filter created by Roman Struna">
+    <meta name="twitter:description" content="A town of salem game assistant. It helps with the logic aspect of the game. Created by Roman Struna.">
   </head>
   <body>
     <noscript>
